# textile

./: .gitignore  CHANGELOG.md  MIGRATION.md  README.md  RELEASING.md  context7.json  pyproject.toml
.devin/: wiki.json
.github/workflows/: ci.yml  deepwiki.yml  publish.yml
examples/: README.md
examples/quickstart/: simple_filter.py
examples/reference_transformers/semantic/: pruning.py  tool_selection.py
examples/reference_transformers/temporal/: README.md  decay.py
tests/: __init__.py
tests/integration/: __init__.py  conftest.py  test_completion_workflow.py  test_streaming_workflow.py  test_tool_workflow.py  test_transformer_pipeline.py
tests/unit/: __init__.py
tests/unit/core/: conftest.py  test_context_window.py  test_message.py  test_metadata.py  test_response_handler_advanced.py  test_response_handler_basic.py  test_response_pattern.py  test_turn_state.py
tests/unit/embeddings/: conftest.py  test_base.py  test_litellm.py
tests/unit/lite/: conftest.py  test_acompletion.py  test_aembedding.py  test_completion.py  test_completion_chunks.py  test_completion_context.py  test_completion_streaming.py  test_completion_turn_index.py  test_completion_utils.py  test_embeddings.py  test_exports.py  test_tokens.py
tests/unit/transformers/: conftest.py  test_decay.py  test_pipeline.py  test_semantic_decay_filtering_rules.py  test_semantic_decay_filtering_thresholds.py  test_semantic_decay_inference.py  test_semantic_decay_init.py  test_semantic_decay_relevance.py  test_semantic_prune.py  test_tool_selection.py
tests/unit/utils/: conftest.py  test_async_helpers.py  test_similarity.py
textile/: __init__.py  config.py
textile/core/: __init__.py  context_window.py  message.py  metadata.py  response_handler.py  response_pattern.py  turn_state.py
textile/embeddings/: __init__.py  base.py  litellm.py
textile/hooks/: __init__.py  metrics.py
textile/lite/: __init__.py  completion.py  embeddings.py  exports.py  tokens.py
textile/transformers/: __init__.py  base.py  decay.py  pipeline.py  semantic_decay.py  semantic_prune.py  tool_selection.py
textile/utils/: __init__.py  async_helpers.py  similarity.py  testing.py
